Implement bulk save for vehicles in VehicleService and update simulation vehicle saving logic; change Hibernate ddl-auto to validate in application properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,6 +12,6 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Opcional: Si quieres que Hibernate cree/actualice las tablas basado en tus entidades
 # Cuidado: 'update' puede modificar tu esquema. 'validate' solo valida. 'create' borra y crea. 'create-drop' borra al final.
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
 
 spring.jpa.open-in-view=false
